@@ -2,6 +2,7 @@
 Version: 5.0.7
 Date: ????
   Changes:
+    - When using LTN and the train is moving to a temporary station it displays the next station in the schedule instead
 ---------------------------------------------------------------------------------------------------
 Version: 5.0.6
 Date: 2020-10-27
